--- a/src/asset/style/index.css
+++ b/src/asset/style/index.css
@@ -39,4 +39,19 @@
 .cont {
     height: calc("100vh - 3.5rem");
 }
+
+image {
+    align-self: center !important;
+}
+
+#reaction > div {
+    background: "#dddd" !important;
+    align-items: center !important;
+    border: 0px solid red !important;
+}
+#reaction > div > * {
+    background: "#dddd" !important;
+    padding: 0px !important;
+    border: 0px solid red !important;
+}
 @tailwind utilities;
